objects/Idea_Milestone__c.object
<CustomObject><fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Deliverables__c</fullName>
        <label>Deliverables</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <label>Estimated Completion Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Idea_in_Action__c</fullName>
        <label>Idea in Action</label>
        <referenceTo>Ideas_Projects__c</referenceTo>
        <relationshipLabel>Idea Milestones</relationshipLabel>
        <relationshipName>R00N4100000Giur1EAB</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Milestone_Description__c</fullName>
        <label>Milestone Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Milestone_Status__c</fullName>
        <label>Milestone Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Idea Milestone</label><nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Idea Milestones</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>